adds gateways, presenters and clean controllers