@@ -17,7 +17,7 @@
 
 	<properties>
 		<java.version>21</java.version>
-		<lombok.version>1.18.32</lombok.version>
+		<lombok.version>1.18.38</lombok.version>
 
 		<!-- SonarQube -->
 		<sonar.projectKey>lata-velha</sonar.projectKey>
@@ -185,6 +185,7 @@
 						<include>**/*Tests.java</include>
 						<include>**/*IT.java</include>
 					</includes>
+					<argLine>-Dnet.bytebuddy.experimental=true</argLine>
 				</configuration>
 			</plugin>
 
@@ -283,7 +284,7 @@
             <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.11.0</version>
+				<version>3.14.0</version>
                 <executions>
                     <execution>
                         <id>default-compile</id>
